# gui_nao

./: CMakeLists.txt  README.md  interfaz2.cpp  interfaz2.h  interfaz2.pro  main.cpp  moc_interfaz2.cpp  qiproject.xml  ui_interfaz2.h
